task: fix swagger
